style.css
*{ /* May need to go back and change font choices and get new links*/
    font-family: 'Open Sans', sans-serif;
    font-family: 'Roboto', sans-serif;
}

body{
    display: flex;
    flex-direction: column;
}

/* Header styling*/
.header {
    background-color: #1f2937;
    color: #f9faf8;
    font-size: 24px;
    display: flex;
    justify-content: space-between;
    padding: 10px 75px 100px 75px;
}

.logo{
    font-weight: 900;
}

ul{
    display: flex;
    list-style-type: none;
    align-items: flex-start;
    margin: 0px;
    padding: 0px;
}

a{
    text-decoration: none;
    color:#f9faf8;
    padding: 16px;
}

/*Container one styling*/
.container.one{
    background-color: #1f2937;
    color: #f9faf8;
    display: flex;
    padding: 10px 50px;
}

.opening{
    flex: 1;
}


.opening .hero{
    font-size: 48px;
    font-weight: 900;

}

.opening .subtext{
    color: #e5e7eb;
    font-size: 18px;
}

.image{
    background-color: gray ;
    display: flex;
    align-items: center;
    justify-content: center;
    flex:1;
    ;
}

/*Container two styling*/

.container.two{
    border: 1px dotted red;
    display:flex;
    flex-direction: column;
    align-items: center;
}

.title{
    border: 1px dotted red;
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    margin-bottom: 50px;
}

.information {
    border: 1px dotted red;
    display: flex;
    flex-direction: row;
    justify-content: center;
   
}

.info{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 25px;
}

.blue-box {
    border: 3px solid #3882f6;
    height: 150px;
    width: 150px;
    box-sizing: border-box;
    border-radius: 8px;
}

.text{
    text-align: center;
}

/*Contatiner three styling*/
.container.three {
    background-color: #e5e7eb;
    color: #1f2937;
    display: flex;
    flex-direction: column;
    padding: 50px 100px;

}

.quote {
    font-size: 36px;
    font-weight: 200;
}

.speaker{
    font-size: 24px;
    font-weight: 900;
    text-align: right;
}

/* Container four styling*/

.container.four{
    background-color: #3882f6;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 700px;
    padding: 25px 50px;
}

.big{
    color: white;
    font-weight: 900;
    text-align: left;
}

.small {
    color: #e5e7eb;
    text-align: left;
}

button#bottom {
    border: 2px solid #e5e7eb;
}


.footer {
    background-color: #1f2937;
    color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    background-color: #3882f6;
    color: #e5e7eb;
    border-radius: 8px;
    padding: 5px 16px;
}

